src/components/Button/SplitButton/SplitButton.module.css
.container {
    position: relative;
    display: flex;
    flex-direction: row;
    justify-content: flex-start;
    align-items: center;
    flex-wrap: nowrap;
    gap: 0.3em;
    border: 1px solid var(--primary-background-color, #222);
    border-radius: 0.3em;
    background-color: var(--secondary-color, cyan);
    color: var(--primary-background-color, #222);
}

.expanded {
    border-bottom-left-radius: none;
    border-bottom-right-radius: none;
}

.primary {
    border-color: var(--primary-button-color, cyan);
    background-color: var(--primary-button-background-color, #EEE);
    color: var(--primary-button-color, cyan);
}

.secondary {
    border-color: var(--secondary-button-color, #222);
    background-color: var(--secondary-button-background-color, #EEE);
    color: var(--secondary-button-color, #222);
}

.success {
    border-color: var(--success-color, green);
    background-color: var(--success-background-color, lightgreen);
    color: var(--success-color, green);
}

.warning {
    border-color: var(--warning-color, yellow);
    background-color: var(--warning-background-color, lightyellow);
    color: var(--warning-color, black);
}

.danger {
    border-color: var(--danger-color, red);
    background-color: var(--danger-background-color, pink);
    color: var(--danger-color, red);
}

.outline {
    border-width: 3px;
    background-color: transparent;
}

.menuContainer {
    display: flex;
    flex-direction: row;
    justify-content: flex-end;
    align-items: center;
    flex-wrap: nowrap;
    gap: 0.3em;
}

.toggleButtonContainer:before {
    content: "\00a0";
    border-left: 3px solid var(--primary-background-color, #222);
    border-radius: 0;
    padding: 0.6em 0;
}

.menu {
    position: absolute;
    width: 100%;
    top: 100%;
    display: flex;
    flex-direction: column;
    justify-content: flex-start;
    align-items: stretch;
    flex-wrap: nowrap;
    gap: 0;
    background-color: var(--secondary-color, teal);
}

.menuItem {
    width: 100%;
}

.menuItem:hover {
    background-color: var(--secondary-color, cyan);
    filter: saturate(0.6) brightness(1.2) contrast(0.4); /* Make the hovered element stand out next to its siblings */
}

.toggleButton,
.toggleButton:disabled,
.menuItem,
.menuItem:disabled {
    border: none;
    border-radius: 0;
    background: none;
}

